# RemoteMCP

./: client.py  expenses.db  readme.MD  server.py
.github/workflows/: docker-image.yml
Client_With_LangChain/: .env  README.md  client1.py  dockerfile  installed_packages.txt  pyproject.toml  requirements.txt  streamlit_ui.py
Client_WithoutUI/Backend/: backend.py
Server_Expenses/: expenses.db  server_expenses.py
Server_Food_Card_Actions/: FoodCardActions.db  server_foodcardactions.py
