[project]
name = "client-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.7",
    "langchain-google-genai>=3.0.3",
    "langchain-mcp-adapters>=0.1.13",
    "python-dotenv>=1.1.1",
    "streamlit>=1.51.0",
]
